--- a/test.css
+++ b/test.css
@@ -7,8 +7,8 @@ body {
     max-width: 800px;
     margin: 0 auto;
     padding: 30px;
-    border-left: 1px solid #333;
-    border-right: 1px solid #333;
+    border-left: 1px solid black;
+    border-right: 1px solid black;
 }
 
 th, td, caption {
